Add rounded corners on main content

--- a/styles/beverages.css
+++ b/styles/beverages.css
@@ -4,6 +4,7 @@
   text-align: left;
   background-color: #fff;
   border: 1px solid #f1f1f1;
+  border-radius: 5px;
   box-shadow: 3px 3px 10px 5px #e7e7e7;
 }
 
